k8s-rpi-apps-vaultwarden/05-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: vw-replaceprefix
  annotations:
    avp.kubernetes.io/path: "k8secrets/externalroutes"  
spec:
  replacePathRegex:
    regex: ^<vwpathprefix>/(.*)
    replacement: /$1
