k8s-rpi-apps-vaultwarden/03-secured-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    avp.kubernetes.io/path: "k8secrets/ingresses"    
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`<vwhostname>.<domainname>`)
    kind: Rule
    services:
    - name: vaultwarden
      port: 80
  - match: Host(`<vwhostname>.<domainname>`) && Path(`/notifications/hub`)
    kind: Rule
    services:
    - name: vaultwarden-ws
      port: 3012
