k8s-rpi-apps-vaultwarden/04-secured-ingress-external.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-ingress-external
  annotations:
    kubernetes.io/ingress.class: traefik
    avp.kubernetes.io/path: "k8secrets/externalroutes"
spec:
  entryPoints:
    - websecure-ext
  routes:
  - match: Host(`<vwexternalhostname>`) && PathPrefix(`<vwpathprefix>`)
    kind: Rule
    services:
    - name: vaultwarden
      port: 80
    middlewares:
      - name: vw-replaceprefix
  tls: {}
